2002-04-19  Bastien Nocera  <hadess@hadess.net>

	* same-gnome.c: (game_about_callback):
	have a nice icon

2002-04-19  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* same-gnome.c: (set_selection), (pref_dialog_response),
	(save_state), (restart), (main):
	* same-gnome.schemas: ported to gconf

2002-02-17  Chris Lyttle  <chris@wilddev.net>

	* help/C/same-gnome.xml: updated for new template.
	* help/C/Makefile.am:  added legal.xml
	* help/C/legal.xml:  added to comply with new template

2002-02-14  Chris Lyttle    <chris@wilddev.net>

	* help/C/same-gnome.xml : move to XML.

	* help/C/same-gnome-C.omf : move to XML.

	* help/C/same-gnome.sgml : deleted, move to XML.

	* help/C/Makefile.am : move to XML.

2002-02-02  Zbigniew Chyla  <cyba@gnome.pl>

	* same-gnome.c (game_about_callback): Don't try to translate empty string.

2002-01-03  Josh Barrow  <drleary@mac.com>

	* same-gnome.c: (load_scenario), (create_same_board):
	Use non-deprecated stuff.

2001-12-19  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:
	* same-gnome.desktop:

	Install into the panel menus correctly.
	
2001-12-14  Juan Pablo Mendoza <jpablo@gnome.org>

	* same-gnome.c: Remove some gdk deprecated stuff.

2001-12-11  Gediminas Paulauskas <menesis@delfi.lt>

	* same-gnome.c: Ask if quit only if game is not finished.
	According to HIG, make preferences dialog instant-apply, reverse
	buttons. Remove "Make it default" option. Preferences and about
	dialogs are unique. No more deprecated stuff.

2001-07-27  Abel Cheung  <maddog@linux.org.hk>

	* same-gnome.desktop: Added traditional Chinese translation.

2001-07-07  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* same-gnome.c: Bye bye imlib.

2001-07-05  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* same-gnome.c (load_scenario): Fix typo.

2001-06-22  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* same-gnome.c (move_tagged_balls), (main): Add the number of
	  marked stones in the statusbar (feature taken from ksame).
