@@ -7,7 +7,9 @@ SUBDIRS = help
 INCLUDES = -I.. -I$(srcdir)/..		\
 	$(GNOME_GAMES_CFLAGS) \
 	-DGNOMELOCALEDIR=\""$(datadir)/locale"\" \
-	-DPIXMAPDIR=\""$(datadir)/pixmaps/same-gnome"\"
+	-DPIXMAPDIR=\""$(datadir)/pixmaps/same-gnome"\" \
+	-DG_DISABLE_DEPRECATED -DGDK_DISABLE_DEPRECATED \
+	-DGTK_DISABLE_DEPRECATED -DGNOME_DISABLE_DEPRECATED
 
 bin_PROGRAMS = same-gnome
 
